[GTK] Too many useless MPRIS notifications https://bugs.webkit.org/show_bug.cgi?id=278721

Reviewed by Philippe Normand.

We are currently spamming users which huge numbers of useless MPRIS
controls. It's not unusual to see one MPRIS notification with "Unknown
Title" and "Unknown Artist" per web process.

This commit adds a last-minute sanity check: drop any MPRIS registration
that does not have a title.

Although this check is good to have regardless, it has the feel of a
workaround rather than a proper solution. E.g. let's say a page has 5
media elements, 4 of which are hidden or otherwise not obvious to the
user, and 1 of which is a prominent video. Ideally we would display
MPRIS controls for the prominent video. Instead, we'll likely choose
badly and wind up dropping the MPRIS registration altogether. So further
improvement would certainly be useful.

Canonical link: https://commits.webkit.org/309615@main